--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,6 +1,6 @@
-<form action='/tweet/<%=@tweet.id%>' method='POST'>
+<form action='/tweets/<%=@tweet.id%>' method='POST'>
   <label> Edit Tweet</label>
-  <input id="tweet_content" type="text" name="tweet[content]" value=<%=@tweet.content%> ><br>
+  <input id="content" type="text" name="content" value=<%=@tweet.content%> ><br>
 
-  <input type="submit" value="Edit Tweet">
+  <input type="submit" value="submit">
 </form>
