--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,5 @@
 <h1 hidden>Welcome to Fwitter</h1>
 
 <div>
-  <a href="/login"><img class="img_btn" src="/buttons/login.png" alt=""></img></a><br>
-  <a href="/signup"><img class="img_btn" src="/buttons/signup.png" alt=""></img></a><br>
+  <a href="/tweets"><img class="img_btn" src="/icons/twitter.png" alt=""></img></a><br>
 </div>
