--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,12 +7,24 @@
   <body>
     <nav>
       <a href="/">Home</a>
-      <a href="/tweets">Tweets</a>
+      <% if session[:user_id].present? %>
+      <a href="/tweets/new">Tweet</a>
+      <a href="/logout">Logout</a>
+      <% else %>
+      <a href="/login">Login</a>
+      <% end %>
     </nav>
 
     <div class="container">
       <%= yield %>
     </div>
+    
+    <!--scripts-->
+    <script>
+    function popMessage() {
+      document.getElementById("foreign_tweet").innerHTML = "This tweet does not belong to you";
+    }
+    </script>
 
   </body>
 </html>
