--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -11,3 +11,6 @@
   <!--submit-->
   <input id="submit" type="submit" value="Log In">
 </form>
+
+<br><br><br><br>
+<button class="btn btn_light" type="button"><a href="/signup">Sign Up</a></button><br><br>
