--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,15 +1,22 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Fwitter</title>
-  </head>
-  <body>
+   <head>
+      <title>Fwitter</title>
+   </head>
+   <body>
 
-    <div class="container">
-      <h1>Welcome to Fwitter!</h1>
-      <h2>This is located in layout.erb!</h2>
-      <h2>Don't forget to <strong>yield</strong> your views!</h2>
-    </div>
+      <div align="right">
+         <h4>
+            <a href="/logout">Log Out</a>
+         </h4>
+      </div>
 
-  </body>
+      <br>
+
+      <div class="container">
+
+         <%= yield %>
+      </div>
+
+   </body>
 </html>
