--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,8 +1,8 @@
 <h1>Create New User</h1>
 <form action="/signup" method="POST">
-  Create user name: <input type="text" name="username" id="username">
-  Create e-mail: <input type="text" name="email" id="email">
-  Create password: <input type="text" name="password" id="password">
-  <input type="submit" value="Create User">
+  Create user name: <input type="text" name="username" id="username" required>
+  Create e-mail: <input type="text" name="email" id="email" required>
+  Create password: <input type="text" name="password" id="password" required>
+  <input type="submit" value="Signup">
 
 </form>
