--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,15 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Fwitter</title>
   </head>
   <body>
+    <nav>
+      <% if logged_in? %>
+        <a href="/tweets">Home</a>
+        <a href="/tweets/new">Create Tweet </a>
+        <a href="/logout">Log Out</a>
 
+      <% else %>
+        <a href="/signup">Sign Up</a>
+        <a href="/login">Sign In</a>
+      <% end %>
+
+    </nav>
+    <h1>Welcome to Fwitter!</h1>
     <div class="container">
-      <h1>Welcome to Fwitter!</h1>
-      <h2>This is located in layout.erb!</h2>
-      <h2>Don't forget to <strong>yield</strong> your views!</h2>
+
+      <%= yield %>
+
+
     </div>
+
 
   </body>
 </html>
