--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -3,4 +3,6 @@
   <p>Username:<input type="text"name="username"></p>
   <p>Email:<input type="email"name="email"></p>
   <p>Password:<input type="password"name="password"></p>
+  <br>
+  <input type="submit" name="submit" value="submit">
 </form>
