--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
 <h1>Welcome to Fwitter!</h1>
 
-<a href="/users/login">Login</a>
-<a href="/users/signup">Sign Up</a>
+<h3><a href="/users/login">Login</a></h3>
+<h3><a href="/users/signup">Sign Up</a></h3>
