Sign up Login forms routes complete

--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,1 +1,7 @@
-create_user.erb
+<h1>Sign Up Below:</h1>
+<form action="/users/signup" method="post">
+  <p>Username: <input type="text" name="username"></p>
+  <p>Email: <input type="text" name="email"></p>
+  <p>Password: <input type="text" name="password"></p>
+  <input type="submit" value="Sign Up" id="sign_up">
+</form>
