--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,7 +4,7 @@
     <title>Fwitter</title>
   </head>
   <body>
-
+    <a href="/logout">Log Out</a>
     <div class="container">
       <%= yield %>
     </div>
