--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -8,5 +8,5 @@
   <label for="password">Enter password: </label>
   <input type="text" name="password" id="password">
 
-  <input type="submit" value="Login">
+  <input type="submit" value="submit">
 </form>
