--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -7,5 +7,5 @@
 
 <form action="/tweets/<%= @tweet.id %>/delete" method="POST">
 	<input id="hidden" type="hidden" name="_method" value="DELETE">
-	<input type="submit" value="Delete Tweet">
+	<input type="submit" value="Delete Tweet" name="Delete Tweet">
 </form>
