--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,8 @@
+<% if !logged_in? %>
+
 <h1>Welcome to Fwitter!</h1>
 
 <h3><a href="/users/login">Login</a></h3>
 <h3><a href="/users/signup">Sign Up</a></h3>
+
+<% end %>
