--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,7 +1,7 @@
 <h2>What's on your mind?</h2>
 <form action="/tweets" method="POST">
 	<input type="text" name="content">
-	<input type="submit" name="Tweet!">
+	<input type="submit" value="Tweet!" name="tweet">
 </form>
 
 
