Tweet edit authentication

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,6 +8,7 @@
       <p><a href="/users/show">Home</a></p>
       <p><a href="/tweets/new">New Tweet</a></p>
       <p><a href="/tweets">View Feed</a></p>
+      <p><a href="/logout">Log Out</a></p>
     <% end %>
     <%= yield %>
     <div class="container">
