--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,4 +1,5 @@
 <p><%= @tweet.content %></p>
+<% if @tweet.user_id == session[:id] %>
 
 <a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a><br>
 
@@ -6,3 +7,5 @@
 	<!-- <input id="hidden" type="hidden" name="_method" value="delete"> -->
 	<input type="submit" value="Delete Tweet">
 </form>
+
+<% end %>
