--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,4 +1,5 @@
 <h1>Your Feed:</h1>
 <% Tweet.all.each do |tweet| %>
-<p><%= tweet.content %> </p><br>
+<a href="/tweets/<%= tweet.id %>"><%= tweet.content %> </a><br>
+
 <% end %>
