--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,7 +2,7 @@
 
 <h1>Welcome to Fwitter!</h1>
 
-<h3><a href="/users/login">Login</a></h3>
-<h3><a href="/users/signup">Sign Up</a></h3>
+<h3><a href="/login">Login</a></h3>
+<h3><a href="/signup">Sign Up</a></h3>
 
 <% end %>
