--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,4 +1,4 @@
-<h2>What's on your mind?</h2>
+<h2>What's on your mind, <%= current_user.username %>?</h2>
 <form action="/tweets" method="POST">
 	<input type="text" name="content">
 	<input type="submit" value="Tweet!" name="tweet">
