--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,4 +1,5 @@
-<h1>Your Feed:</h1>
+<h1>Welcome, <%= current_user.username %>!</h1>
+<h2>Your Feed:</h2>
 <% Tweet.all.each do |tweet| %>
 <a href="/tweets/<%= tweet.id %>"><%= tweet.content %> </a><br>
 
