--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,5 +1,5 @@
 <h1>Sign Up Below:</h1>
-<form action="/users/signup" method="post">
+<form action="/signup" method="post">
   <p>Username: <input type="text" name="username"></p>
   <p>Email: <input type="text" name="email"></p>
   <p>Password: <input type="text" name="password"></p>
