--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,7 @@
 <h1>Log In Below:</h1>
-<form action="/users" method="post">
+<form action="/login" method="post">
   <p>Username: <input type="text" name="username"></p>
   <p>Email: <input type="text" name="email"></p>
   <p>Password: <input type="text" name="password"></p>
-  <input type="submit" value="Log In" id="login">
+  <input type="submit" value="Log In" id="submit">
 </form>
