--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -3,5 +3,5 @@
 <form action="/tweets/<%= @tweet.id %>" method="POST">
 	<input type="hidden" name="_method" value="PATCH">
 	<input type="text" name="content" value="<%= @tweet.content %>">
-	<input type="submit" name="Tweet!">
+	<input type="submit" name="Tweet!" id="submit">
 </form>
