--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,6 +1,6 @@
-<h2>What's on your mind, <%= current_user.username %>?</h2>
+<h3>What's on your mind, <%= current_user.username %>?</h3>
 <form action="/tweets" method="POST">
-	<input type="text" name="content">
+	<textarea rows="5" cols="50" name="content"></textarea>
 	<input type="submit" value="Tweet!" id="submit">
 </form>
 
