--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,7 +1,7 @@
-<h2>Edit your tweet:</h2>
+<h3>Edit your tweet:</h3>
 
 <form action="/tweets/<%= @tweet.id %>" method="POST">
 	<input type="hidden" name="_method" value="PATCH">
-	<input type="text" name="content" value="<%= @tweet.content %>">
+	<textarea rows="5" cols="50" name="content" value="<%= @tweet.content %>"></textarea>
 	<input type="submit" name="Tweet!" id="submit">
 </form>
