--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,7 +1,7 @@
 <h1>Welcome, <%= current_user.username %>!</h1>
 <h2>Your Feed:</h2>
 <% Tweet.all.each do |tweet| %>
-	<% if tweet.id == current_user.id %>
+	<% if tweet.user_id == current_user.id %>
 		<a href="/tweets/<%= tweet.id %>"><%= tweet.content %> </a><br>
 	<% end %>
 <% end %>
