--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,5 +1,6 @@
 <h1>Displaying tweet #<%= @tweet.id %></h1>
 <p><%= @tweet.content %></p>
+<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
 <form action="/tweets/<%= @tweet.id %>/delete" method="POST">
   <input type="hidden" id="hidden" name="_method" value="DELETE">
   <input type="submit" value="Delete Tweet">
