all but 4 specs passing

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -10,13 +10,13 @@
 
 <% if @wrong_username %>
   <div class="alert alert-danger" role="alert">
-    Could not find account with that email. Please try again or <a href="/signup">sign up</a>.
+    Could not find account with that username. Please try again or <a href="/signup">sign up</a>.
   </div>
 <% end %>
 
 <form method="post" action="/login">
-  <label>Email: </label>
-  <input type="text" name="email" placeholder="example@email.com" required>
+  <label>Username: </label>
+  <input type="text" name="username" placeholder="Username" required>
 
   <br><br>
 
@@ -25,7 +25,7 @@
 
   <br><br>
 
-  <input type="submit" value="Log In">
+  <input type="submit" id="submit" value="Log In">
 </form>
 
 <hr>
