--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,12 +1,17 @@
-<h3>Tweets by <%= current_user.username %></h3>
+<h3>Welcome, <%= current_user.username %></h3>
 
 <br>
 
 <form action="/tweets/new">
   <input type="submit" value="Create a New Tweet">
 </form>
+<br>
+<form action="/users/<%= current_user.slug %>">
+  <input type="submit" value="View My Tweets">
+</form>
 
 <% @tweets.sort_by{|tweet| tweet.id}.reverse.each do |tweet| %>
   <hr>
+  <h4><a href="/users/<%= tweet.user.slug %>"><%= tweet.user.username %></a></h4>
   <a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a>
 <% end %>
