--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,18 +1,20 @@
-<h3><%= current_user.username %>'s Tweet</h3>
+<h3><%= @tweet.user.username %>'s Tweet</h3>
 <%= @tweet.content %>
 
-<hr>
+<% if current_user == @tweet.user %>
+  <hr>
 
-<form action="/tweets/<%= @tweet.id %>/edit">
-  <input type="submit" value="Edit Tweet">
-</form>
+  <form action="/tweets/<%= @tweet.id %>/edit">
+    <input type="submit" value="Edit Tweet">
+  </form>
 
-<br>
+  <br>
 
-<form action="/tweets/<%= @tweet.id %>/delete" method="post">
-  <input type="hidden" id="hidden" name="_method" value="delete">
-  <input type="submit" value="Delete Tweet">
-</form>
+  <form action="/tweets/<%= @tweet.id %>/delete" method="post">
+    <input type="hidden" id="hidden" name="_method" value="delete">
+    <input type="submit" id="Delete Tweet" value="Delete Tweet">
+  </form>
+<% end %>
 
 <hr>
 
