--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,11 +1,3 @@
 <h4>Welcome to Fwitter, please:</h4>
 
-<form action="/login">
-  <input type="submit" value="Log In">
-</form>
-
-<br>
-
-<form action="/signup">
-  <input type="submit" value="Sign Up">
-</form>
+<a href="/login">Log In</a> or <a href="/signup">Sign Up</a>
