--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,7 +8,7 @@
 
     <div class="container">
       <ul class="nav navbar-nav navbar-left">
-        <h1>Fwitter</h1>
+        <h1><a href="/">Fwitter</a></h1>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <br>
