--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,5 @@
 <a href="/logout">Log Out</a>
 <h2>Welcome, <%=@user.username%></h2>
-<%@user.tweets.each do |tweet|%>
+<%Tweet.all.each do |tweet|%>
 <%=tweet.content%>
 <%end%>
