--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,4 @@
-<form action="/tweets" method="POST">
+<form action="/login" method="POST">
   <label>Username: <input type="text" name="username"></label>
   <label>Password: <input type="text" name="password"></label>
   <input type="submit" value="Login" id="submit">
