--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,5 @@
 <h3>Welcome, <%= @user.username %></h3>
-
+<p>Click <a href="/tweets/new">here</a> to create new tweet.</p>
 <!-- Display all tweets -->
 <h3>All Tweets:</h3>
 <% @tweets.each do |tweet| %>
