--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,11 +5,16 @@
   </head>
   <body>
 
-    <div class="container">
-      <h1>Welcome to Fwitter!</h1>
-      <h2>This is located in layout.erb!</h2>
-      <h2>Don't forget to <strong>yield</strong> your views!</h2>
-    </div>
+    <% if logged_in? %>
+      <a href="/tweets/new">New Tweet</a>
+      <a href="/logout">Log Out</a>
 
+    <% else %>
+      <a href="/signup">Sign Up</a>
+      <a href="/login">Login</a>
+      <% end %>
+    <div class="container">
+      <%=yield%>
+    </div>
   </body>
 </html>
