--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,8 +1,7 @@
-You're about to login, bro!
+You're about to login!
 
-<form>
-
-
-
-
+<form method="POST" action="/login">
+<input type="text" name="username" placeholder="Username">
+<input type="text" name="password" placeholder="Password">
+<input type="submit" value="submit">
 </form>
