--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,7 @@
 You're about to login!
 
 <form method="POST" action="/login">
-<input type="text" name="username" placeholder="Username">
-<input type="text" name="password" placeholder="Password">
-<input type="submit" value="submit">
+<input type="text" name="username">
+<input type="text" name="password">
+<input type="submit" name="submit" value="submit">
 </form>
