--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -4,3 +4,4 @@
 <input id="hidden" type="hidden" name="_method" value="delete">
 <input type="submit" value="Delete">
 </form>
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
