--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -2,6 +2,6 @@
 
 <form method="POST" action="/tweets/<%=@tweet.id%>/delete">
 <input id="hidden" type="hidden" name="_method" value="delete">
-<input type="submit" value="Delete">
+<input type="submit" value="Delete Tweet">
 </form>
 <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
