add links to fwitter home page to sign up or login. add div class to signup form

--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,13 +1,16 @@
 <h2> Join Fwitter Today </h2>
-<form method="post" action="/signup">
-    <label>Username:</label>
-    <input type"text" name="username">
 
-    <label>Email:</label>
-    <input type"text" name="email">
+<div class="signup form">
+    <form method="post" action="/signup">
+        <label>Username:</label>
+        <input type"text" name="username">
 
-    <label>Password:</label>
-    <input type"text" name="password">
+        <label>Email:</label>
+        <input type"text" name="email">
 
-    <input type="submit" id="submit" value="Sign Up">
-</form>
+        <label>Password:</label>
+        <input type"text" name="password">
+
+        <input type="submit" id="submit" value="Sign Up">
+    </form>
+</div>
