--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,3 +1,10 @@
 <h2> Tweets </h2>
 
-<h3>Welcome,</h3>
+<h3>Welcome, <%=@user.username%></h3>
+
+<ul class ="tweets list">
+<%@tweets.each do |tweet|%>
+    <li> <%tweet.username%> fweeted: <br/>
+        <%=tweet.content%> </li>
+    <%end%>
+</ul>
