--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,6 +1,6 @@
 <h2>Hey there, <%=@user.username%> </h2>
 
-<ul class="user_tweets">
+<ul class="tweets list">
 <% @user.tweets.each do |tweet| %>
     <li><%=tweet.content%></li>
 <%end%>
