--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,17 +1,15 @@
 <h2> See Your Newest Tweet Below </h2>
 
+<% if flash.has?(:notice) %>
+  <%= flash[:notice] %>
+<% end %>
+
 <%=@tweet.content%><br/><br/>
 
-<form method="post" action="/tweet/<%=@tweet.id%>">
-    <input id="hidden" type="hidden" name="_method" value="PATCH">
-    <input type="submit" value="edit">
-</form>
+<a href="/tweets/<%="#{@tweet.id}"%>/edit"><input type="submit" value="Edit Tweet"></a>
 
 
-
-
-<form method="post" action="/tweet/<%=@tweet.id%>">
-    <input id="hidden" type="hidden" name="_method" value="DELETE">
-    <input type="submit" value="delete">
+<form method="post" action="/tweets/<%=@tweet.id%>/delete">
+    <input type="submit" value="Delete Tweet">
 </form>
 
