add link to signup on login page

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -14,4 +14,5 @@
 
         <input type="submit" id="submit" value="Log In">
     </form>
+    <p>Don't have an account?<br><a href="/signup">Signup</a></p>
 </div>
