--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -3,8 +3,8 @@
 <h3>Welcome, <%=@user.username.capitalize%></h3>
 
 <ul class ="tweets list">
-    <%@tweets.each do |tweet|%>
-        <li> <%=tweet.user.username.capitalize%> tweeted: <br/>
-          <%=tweet.content%> </li><br/><br/>
+    <% Tweet.all.each do |tweet| %>
+        <li> <%= tweet.user.username.capitalize %> tweeted: <br/>
+          <%= tweet.content %> </li><br/><br/>
      <% end %>
     </ul>
