--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,4 +1,6 @@
 <h1>Content</h1>
 <p><%=@tweet.content%></p>
 
-<a href="/tweets/delete">Delete Tweet</a>
+<a class="button" href="/tweets/delete">Delete Tweet</a>
+
+<a class="button" href="/Edit Tweet">Edit Tweet</a>
