add light css and flash notice to patch route

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,11 +2,16 @@
 <html>
   <head>
     <title>Fwitter</title>
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
   </head>
   <body>
-
+    <ul class='nav'>
+      <li><a href="/">Home</a></li>
+      <li><a href="/tweets">Tweets</a></li>
+      <li><a href="/logout">Logout</a></li>
+    </ul>
     <div class="container">
-      <h1>Welcome to Fwitter!</h1>
+     <h1>Welcome to Fwitter!</h1>
       <%= yield %>
     </div>
 
