--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -17,4 +17,6 @@
 
         <input type="submit" id="submit" value="Sign Up">
     </form>
+    <p>Already have an account?<br>
+    <a href='/login'>Login </a><p>
 </div>
