--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -2,9 +2,17 @@
 
 <h3>Welcome, <%=@user.username.capitalize%></h3>
 
+<% if flash.has?(:incorrectinfo) %>
+  <%= flash[:incorrectinfo] %>
+<% end %>
+
+<p>Something on your mind?</p>
+<a href="/tweets/new">Tweet!</a>
 <ul class ="tweets list">
     <% Tweet.all.each do |tweet| %>
         <li> <%= tweet.user.username.capitalize %> tweeted: <br/>
           <%= tweet.content %> </li><br/><br/>
      <% end %>
     </ul>
+
+
