--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,6 +1,10 @@
 <h1>Content</h1>
 <p><%=@tweet.content%></p>
 
-<a class="button" href="/tweets/delete">Delete Tweet</a>
 
-<a class="button" href="/Edit Tweet">Edit Tweet</a>
+  <form action="/tweets/<%=@tweet.id%>" method="post">
+    <input type="hidden" name="_method" value="DELETE">
+    <input type="submit" value="Delete Tweet">
+  </form>
+
+  <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
