--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -2,7 +2,8 @@
 <form class="" action="/tweets/<%=@tweet.id%>" method="post">
     <input type="hidden" name="_method" value="patch">
 
+    <%=@tweet.content%>
     <h1><label>Edit Tweet</label></h1>
-    <input type="text" name="content" value="<%=@tweet.content%>">
+    <input type="text" name="content" value="">
     <input type="submit" id="submit" value="Submit">
 </form>
