--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,23 +1,11 @@
 <h1>Create New User</h1>
 
-
-<<<<<<< HEAD
 <form class="" action="/signup" method="post">
 
-  <label> Name </label>
-  <input type="text" name="username"> <br></br>
-=======
-<form class="" action="/users/signup" method="post">
-
->>>>>>> 6a97638c14bf0bf01e2f15bac62bfe838323ac3d
-
-  <label> Email </label>
-  <input type="email" name="email"> <br></br>
-
-  <label> Password </label>
-  <input type="text" name="password"> <br></br>
+  <label> Name </label><input type="text" name="username" required> <br></br>
+  <label> Email </label><input type="email" name="email" required> <br></br>
+  <label> Password </label><input type="text" name="password" required> <br></br>
 
   <input type="submit" name="" value="Create New User">
-
 
 </form>
