--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,12 +2,8 @@
 
 <form class="" action="/login" method="post">
 
-
-  <label> Name </label>
-  <input type="text" name="username"> <br></br>
-
-  <label> Password </label>
-  <input type="text" name="password"> <br></br>
+  <label> Name </label> <input type="text" name="username"> <br></br>
+  <label> Password </label> <input type="text" name="password"> <br></br>
 
   <input id="submit" type="submit" name="" value="Log In">
 
