--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,8 +1,4 @@
-<h2> See Your Newest Tweet Below </h2>
-
-<% if flash.has?(:notice) %>
-  <%= flash[:notice] %>
-<% end %>
+<h2> <%=@tweet.user.username%> Tweeted </h2>
 
 <%=@tweet.content%><br/><br/>
 
@@ -12,4 +8,8 @@
 <form method="post" action="/tweets/<%=@tweet.id%>/delete">
     <input type="submit" value="Delete Tweet">
 </form>
+
+<% if flash.has?(:notice) %>
+  <%= flash[:notice] %>
+<% end %><br/><br/>
 
