--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -10,7 +10,7 @@
 <a href="/tweets/new">Tweet!</a>
 <ul class ="tweets list">
     <% Tweet.all.each do |tweet| %>
-        <li> <%= tweet.user.username.capitalize %> tweeted: <br/>
+        <li><a href="/tweets/<%=tweet.id%>"> <%= tweet.user.username.capitalize %> tweeted:</a><br/>
           <%= tweet.content %> </li><br/><br/>
      <% end %>
     </ul>
