--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -4,5 +4,5 @@
   <textarea name="content" id= "content" cols="50" rows="5">
   <%=@tweet.content%>
 </textarea><br><br>
-<input type="submit" id="submit" name ="submit">
+<button type="button" id='submit' name ="submit"></button>
 </form>
