--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,5 +1,5 @@
 <h1>Please Login</h1>
-<form action="/users/login" method="POST">
+<form action="/login" method="POST">
 	<input type="text" name="username" placeholder="Username:">
 	<input type="password" name="password" placeholder="Password:">
 	<input type="submit" value="Log In">
