--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -12,7 +12,7 @@
 Start Your Tweet Here...
 </textarea>
 <br />
-  <input type="submit" id= "submit" name = "submit" >
+  <input class="btn btn-primary" type="submit" value="submit">
 </form>
   </body>
 </html>
