--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,6 +8,7 @@
     <div class="container">
       <h1>Welcome to Fwitter!</h1>
       <%if logged_in?%>
+          <a href="/tweets/new">Create Tweet </a>
           <a href= "/logout">Log Out</a>
       </h2>
       <%end%>
