--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -3,8 +3,13 @@
   <head>
     <title>Tweets</title>
   </head>
-<h2>Welcome, <%=@user.username%>.</h2>
-  <% @tweets.each do |tweet| %>
-    <li><b>Username: </b><%=tweet.user.username%> <b> Content: </b><a href="/tweets/<%= tweet.id %>"><%= tweet.content %> </a></li>
-  <% end %>
+  <div class="container">
+  <H2>Welcome, <%=@user.username%>.</H2>
+  <br>
+  <dl>
+  <%@tweets.each do |tweet|%>
+    <dt>Username: <%=tweet.user.username%> </dt>
+    <dd> - Content:<a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a> </dd>
+    <% end %>
+  </div>
 </html>
