--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,9 +6,16 @@
   <body>
 
     <div class="container">
-      <h1>Welcome to Fwitter!</h1>
-      <h2>This is located in layout.erb!</h2>
-      <h2>Don't forget to <strong>yield</strong> your views!</h2>
+      <h1>Fwitter</h1>
+      <!-- <h2>This is located in layout.erb!</h2>
+      <h2>Don't forget to <strong>yield</strong> your views!</h2> -->
+
+      <%= yield %>
+
+      <% if logged_in? %>
+        <a href="/logout">Log Out</a>
+      <% end %>
+
     </div>
 
   </body>
